{bugBash - 2} Vijay | remove button on question paper mis aligned fixed

--- a/src/CreateQuestionPaper/create_question_paper.css
+++ b/src/CreateQuestionPaper/create_question_paper.css
@@ -198,7 +198,8 @@ li {
     cursor: hand;
     display: inline;
     float: right;
-    margin-right: 0.3%;
+    margin: -1%;
+    margin-top: auto;
 }
 
 .addNote {
